--- a/archives/toutiao-search/2024-03-08.md
+++ b/archives/toutiao-search/2024-03-08.md
@@ -1,59 +1,74 @@
 # 2024-03-08
 
-共 213 条
+共 227 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 08 2024 13:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Mar 08 2024 14:07:02 GMT+0800 (China Standard Time) -->
+1. [49吨煤车压顶 车内三人全身而退](https://so.toutiao.com/search?keyword=49吨煤车压顶+车内三人全身而退)
 1. [打破“一人逃亡全家得利”迷梦](https://so.toutiao.com/search?keyword=打破“一人逃亡全家得利”迷梦)
-1. [《龙珠》作者鸟山明去世](https://so.toutiao.com/search?keyword=《龙珠》作者鸟山明去世)
 1. [从全国两会看“关键一年”](https://so.toutiao.com/search?keyword=从全国两会看“关键一年”)
 1. [劳荣枝案写入最高法报告](https://so.toutiao.com/search?keyword=劳荣枝案写入最高法报告)
 1. [代表：要让电动汽车充次电跑1000公里](https://so.toutiao.com/search?keyword=代表：要让电动汽车充次电跑1000公里)
-1. [MEGA刚上市就被抛弃 理想凉了吗](https://so.toutiao.com/search?keyword=MEGA刚上市就被抛弃+理想凉了吗)
+1. [《龙珠》作者鸟山明去世](https://so.toutiao.com/search?keyword=《龙珠》作者鸟山明去世)
 1. [妇女节放假半天不调休](https://so.toutiao.com/search?keyword=妇女节放假半天不调休)
-1. [普京向毕业生送花时打趣绍伊古](https://so.toutiao.com/search?keyword=普京向毕业生送花时打趣绍伊古)
-1. [中山医院否认张学友住进ICU](https://so.toutiao.com/search?keyword=中山医院否认张学友住进ICU)
-1. [49吨煤车压顶 车内三人全身而退](https://so.toutiao.com/search?keyword=49吨煤车压顶+车内三人全身而退)
-1. [张学友病因疑为上呼吸道感染](https://so.toutiao.com/search?keyword=张学友病因疑为上呼吸道感染)
-1. [瑞典正式加入北约](https://so.toutiao.com/search?keyword=瑞典正式加入北约)
-1. [俄罗斯为何想找中国贷款](https://so.toutiao.com/search?keyword=俄罗斯为何想找中国贷款)
-1. [酒店回应陌生女子尾随男子进屋睡觉](https://so.toutiao.com/search?keyword=酒店回应陌生女子尾随男子进屋睡觉)
-1. [92岁老人没参加外孙女订婚惹怒女儿](https://so.toutiao.com/search?keyword=92岁老人没参加外孙女订婚惹怒女儿)
-1. [92岁亿万富翁默多克第6次订婚](https://so.toutiao.com/search?keyword=92岁亿万富翁默多克第6次订婚)
-1. [男子花百万买车位却不能安装充电桩](https://so.toutiao.com/search?keyword=男子花百万买车位却不能安装充电桩)
-1. [瑞典加入北约会引发哪些后果](https://so.toutiao.com/search?keyword=瑞典加入北约会引发哪些后果)
-1. [孟庭苇谈90后自嘲老阿姨](https://so.toutiao.com/search?keyword=孟庭苇谈90后自嘲老阿姨)
-1. [专家谈俄导弹落在泽连斯基车队附近](https://so.toutiao.com/search?keyword=专家谈俄导弹落在泽连斯基车队附近)
-1. [公司妇女节给女员工发馒头](https://so.toutiao.com/search?keyword=公司妇女节给女员工发馒头)
-1. [甄子丹：想演内地警察但没人请我](https://so.toutiao.com/search?keyword=甄子丹：想演内地警察但没人请我)
-1. [我国发现首个深水深层大油田](https://so.toutiao.com/search?keyword=我国发现首个深水深层大油田)
-1. [3个年逾70的“老虎”被最高法点名](https://so.toutiao.com/search?keyword=3个年逾70的“老虎”被最高法点名)
-1. [美警告：有人密谋在莫斯科发动袭击](https://so.toutiao.com/search?keyword=美警告：有人密谋在莫斯科发动袭击)
-1. [冯巩用段子祝女性妇女节快乐](https://so.toutiao.com/search?keyword=冯巩用段子祝女性妇女节快乐)
-1. [返乡新农人：开拖拉机的女生很霸气](https://so.toutiao.com/search?keyword=返乡新农人：开拖拉机的女生很霸气)
-1. [柳岩送妇女节祝福：要精彩地活](https://so.toutiao.com/search?keyword=柳岩送妇女节祝福：要精彩地活)
 1. [4名狱警殴打服刑人员致死获刑](https://so.toutiao.com/search?keyword=4名狱警殴打服刑人员致死获刑)
+1. [中山医院否认张学友住进ICU](https://so.toutiao.com/search?keyword=中山医院否认张学友住进ICU)
+1. [美警告：有人密谋在莫斯科发动袭击](https://so.toutiao.com/search?keyword=美警告：有人密谋在莫斯科发动袭击)
+1. [酒店回应陌生女子尾随男子进屋睡觉](https://so.toutiao.com/search?keyword=酒店回应陌生女子尾随男子进屋睡觉)
+1. [张学友病因疑为上呼吸道感染](https://so.toutiao.com/search?keyword=张学友病因疑为上呼吸道感染)
+1. [龙珠不会再有续集了](https://so.toutiao.com/search?keyword=龙珠不会再有续集了)
+1. [MEGA刚上市就被抛弃 理想凉了吗](https://so.toutiao.com/search?keyword=MEGA刚上市就被抛弃+理想凉了吗)
+1. [92岁亿万富翁默多克第6次订婚](https://so.toutiao.com/search?keyword=92岁亿万富翁默多克第6次订婚)
+1. [瑞典正式加入北约](https://so.toutiao.com/search?keyword=瑞典正式加入北约)
 1. [鸟山明曾说没成龙《醉拳》就没龙珠](https://so.toutiao.com/search?keyword=鸟山明曾说没成龙《醉拳》就没龙珠)
+1. [福建提及金门供水问题有何深意](https://so.toutiao.com/search?keyword=福建提及金门供水问题有何深意)
+1. [3个年逾70的“老虎”被最高法点名](https://so.toutiao.com/search?keyword=3个年逾70的“老虎”被最高法点名)
+1. [媒体：35岁就业门槛莫要讨论三五年](https://so.toutiao.com/search?keyword=媒体：35岁就业门槛莫要讨论三五年)
+1. [公司妇女节给女员工发馒头](https://so.toutiao.com/search?keyword=公司妇女节给女员工发馒头)
+1. [冯巩用段子祝女性妇女节快乐](https://so.toutiao.com/search?keyword=冯巩用段子祝女性妇女节快乐)
+1. [雷军晒两会工作照](https://so.toutiao.com/search?keyword=雷军晒两会工作照)
+1. [普京向毕业生送花时打趣绍伊古](https://so.toutiao.com/search?keyword=普京向毕业生送花时打趣绍伊古)
+1. [“罚款0元记0分” 这种罚单咋处理](https://so.toutiao.com/search?keyword=“罚款0元记0分”+这种罚单咋处理)
+1. [媒体：加大政策支持保障种粮收益](https://so.toutiao.com/search?keyword=媒体：加大政策支持保障种粮收益)
+1. [俄罗斯为何想找中国贷款](https://so.toutiao.com/search?keyword=俄罗斯为何想找中国贷款)
+1. [我国发现首个深水深层大油田](https://so.toutiao.com/search?keyword=我国发现首个深水深层大油田)
+1. [代表建议进一步改革完善年度体检](https://so.toutiao.com/search?keyword=代表建议进一步改革完善年度体检)
+1. [专家谈俄导弹落在泽连斯基车队附近](https://so.toutiao.com/search?keyword=专家谈俄导弹落在泽连斯基车队附近)
+1. [雷军：为小米汽车上市做最后冲刺](https://so.toutiao.com/search?keyword=雷军：为小米汽车上市做最后冲刺)
+1. [委员建议老年人在全国坐公交免费](https://so.toutiao.com/search?keyword=委员建议老年人在全国坐公交免费)
+1. [海贼王和火影忍者作者悼念鸟山明](https://so.toutiao.com/search?keyword=海贼王和火影忍者作者悼念鸟山明)
+1. [孟庭苇谈90后自嘲老阿姨](https://so.toutiao.com/search?keyword=孟庭苇谈90后自嘲老阿姨)
+1. [男子捞到一个自带戒指的田螺](https://so.toutiao.com/search?keyword=男子捞到一个自带戒指的田螺)
+1. [77名被告以正当防卫宣告无罪](https://so.toutiao.com/search?keyword=77名被告以正当防卫宣告无罪)
+1. [李稻葵：产假延到2年会致女性就业难](https://so.toutiao.com/search?keyword=李稻葵：产假延到2年会致女性就业难)
+1. [瑞典加入北约会引发哪些后果](https://so.toutiao.com/search?keyword=瑞典加入北约会引发哪些后果)
+1. [伊万科维奇：自豪执教国足](https://so.toutiao.com/search?keyword=伊万科维奇：自豪执教国足)
+1. [政协委员建议适度有序放开冻卵限制](https://so.toutiao.com/search?keyword=政协委员建议适度有序放开冻卵限制)
+1. [价格战后比亚迪销量猛增](https://so.toutiao.com/search?keyword=价格战后比亚迪销量猛增)
+1. [山东泰山队遭遇伤病潮](https://so.toutiao.com/search?keyword=山东泰山队遭遇伤病潮)
+1. [男子花百万买车位却不能安装充电桩](https://so.toutiao.com/search?keyword=男子花百万买车位却不能安装充电桩)
+1. [返乡新农人：开拖拉机的女生很霸气](https://so.toutiao.com/search?keyword=返乡新农人：开拖拉机的女生很霸气)
+1. [陈军：要进一步突破固态电池的研发](https://so.toutiao.com/search?keyword=陈军：要进一步突破固态电池的研发)
+1. [海外媒体现场直击两会](https://so.toutiao.com/search?keyword=海外媒体现场直击两会)
+1. [库里：本赛季常规赛还剩下21场](https://so.toutiao.com/search?keyword=库里：本赛季常规赛还剩下21场)
+1. [杭州小伙买100万黄金一年赚50%](https://so.toutiao.com/search?keyword=杭州小伙买100万黄金一年赚50%)
+1. [麦麦提江执法浙江和海港比赛](https://so.toutiao.com/search?keyword=麦麦提江执法浙江和海港比赛)
+1. [洪秀柱：要对大龄剩女评价一笑置之](https://so.toutiao.com/search?keyword=洪秀柱：要对大龄剩女评价一笑置之)
+1. [92岁老人没参加外孙女订婚惹怒女儿](https://so.toutiao.com/search?keyword=92岁老人没参加外孙女订婚惹怒女儿)
+1. [甄子丹：想演内地警察但没人请我](https://so.toutiao.com/search?keyword=甄子丹：想演内地警察但没人请我)
+1. [柳岩送妇女节祝福：要精彩地活](https://so.toutiao.com/search?keyword=柳岩送妇女节祝福：要精彩地活)
 1. [极简版最高法工作报告来了](https://so.toutiao.com/search?keyword=极简版最高法工作报告来了)
 1. [英伟达市值逼近苹果](https://so.toutiao.com/search?keyword=英伟达市值逼近苹果)
 1. [龙珠官网：鸟山明有作品正在创作](https://so.toutiao.com/search?keyword=龙珠官网：鸟山明有作品正在创作)
-1. [洪秀柱：要对大龄剩女评价一笑置之](https://so.toutiao.com/search?keyword=洪秀柱：要对大龄剩女评价一笑置之)
-1. [福建提及金门供水问题有何深意](https://so.toutiao.com/search?keyword=福建提及金门供水问题有何深意)
-1. [77名被告以正当防卫宣告无罪](https://so.toutiao.com/search?keyword=77名被告以正当防卫宣告无罪)
-1. [媒体：35岁就业门槛莫要讨论三五年](https://so.toutiao.com/search?keyword=媒体：35岁就业门槛莫要讨论三五年)
 1. [工信部：加大6G研发力度](https://so.toutiao.com/search?keyword=工信部：加大6G研发力度)
-1. [龙珠不会再有续集了](https://so.toutiao.com/search?keyword=龙珠不会再有续集了)
 1. [“寿命长不长牙齿先知”说法靠谱吗](https://so.toutiao.com/search?keyword=“寿命长不长牙齿先知”说法靠谱吗)
 1. [国足新帅：最终目标是进世界杯](https://so.toutiao.com/search?keyword=国足新帅：最终目标是进世界杯)
 1. [男生打学校开水一秒变仨数](https://so.toutiao.com/search?keyword=男生打学校开水一秒变仨数)
 1. [专家三问美国涉南海声明](https://so.toutiao.com/search?keyword=专家三问美国涉南海声明)
-1. [价格战后比亚迪销量猛增](https://so.toutiao.com/search?keyword=价格战后比亚迪销量猛增)
 1. [启源A07内饰大改](https://so.toutiao.com/search?keyword=启源A07内饰大改)
 1. [布林肯谈瑞典入北约：我们空前强大](https://so.toutiao.com/search?keyword=布林肯谈瑞典入北约：我们空前强大)
 1. [孟羽童谈做博主后的收入](https://so.toutiao.com/search?keyword=孟羽童谈做博主后的收入)
 1. [专家：菲律宾和美国在南海里应外合](https://so.toutiao.com/search?keyword=专家：菲律宾和美国在南海里应外合)
-1. [陈军：要进一步突破固态电池的研发](https://so.toutiao.com/search?keyword=陈军：要进一步突破固态电池的研发)
-1. [“罚款0元记0分” 这种罚单咋处理](https://so.toutiao.com/search?keyword=“罚款0元记0分”+这种罚单咋处理)
 1. [北京暂未开放个人申领第三代社保卡](https://so.toutiao.com/search?keyword=北京暂未开放个人申领第三代社保卡)
 1. [母鸡被老鹰按倒 公鸡来帮忙却秒怂](https://so.toutiao.com/search?keyword=母鸡被老鹰按倒+公鸡来帮忙却秒怂)
 1. [亚丁湾遭胡塞袭击船员撤至吉布提](https://so.toutiao.com/search?keyword=亚丁湾遭胡塞袭击船员撤至吉布提)
@@ -100,7 +115,6 @@
 1. [国家说要过“紧日子”释放什么信号](https://so.toutiao.com/search?keyword=国家说要过“紧日子”释放什么信号)
 1. [2024中国向“新”发力](https://so.toutiao.com/search?keyword=2024中国向“新”发力)
 1. [加拿大赔偿在华被捕间谍700万加元](https://so.toutiao.com/search?keyword=加拿大赔偿在华被捕间谍700万加元)
-1. [雷军：为小米汽车上市做最后冲刺](https://so.toutiao.com/search?keyword=雷军：为小米汽车上市做最后冲刺)
 1. [俩男子起冲突被各自妻子紧紧抱住](https://so.toutiao.com/search?keyword=俩男子起冲突被各自妻子紧紧抱住)
 1. [问界理想“你追我赶”](https://so.toutiao.com/search?keyword=问界理想“你追我赶”)
 1. [网友称高速爆胎交警拖车一分钱没收](https://so.toutiao.com/search?keyword=网友称高速爆胎交警拖车一分钱没收)
