--- a/archives/toutiao-search/2024-03-08.md
+++ b/archives/toutiao-search/2024-03-08.md
@@ -1,45 +1,67 @@
 # 2024-03-08
 
-共 227 条
+共 247 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 08 2024 14:07:02 GMT+0800 (China Standard Time) -->
-1. [49吨煤车压顶 车内三人全身而退](https://so.toutiao.com/search?keyword=49吨煤车压顶+车内三人全身而退)
-1. [打破“一人逃亡全家得利”迷梦](https://so.toutiao.com/search?keyword=打破“一人逃亡全家得利”迷梦)
+<!-- 最后更新时间 Fri Mar 08 2024 15:00:49 GMT+0800 (China Standard Time) -->
+1. [乘客打到比亚迪秦狂笑后司机秒懂](https://so.toutiao.com/search?keyword=乘客打到比亚迪秦狂笑后司机秒懂)
+1. [“两高”点名的贪官 有人受贿5.4亿](https://so.toutiao.com/search?keyword=“两高”点名的贪官+有人受贿5.4亿)
 1. [从全国两会看“关键一年”](https://so.toutiao.com/search?keyword=从全国两会看“关键一年”)
 1. [劳荣枝案写入最高法报告](https://so.toutiao.com/search?keyword=劳荣枝案写入最高法报告)
-1. [代表：要让电动汽车充次电跑1000公里](https://so.toutiao.com/search?keyword=代表：要让电动汽车充次电跑1000公里)
+1. [49吨煤车压顶 车内三人全身而退](https://so.toutiao.com/search?keyword=49吨煤车压顶+车内三人全身而退)
+1. [网友白菜价买海景房 整栋就自家亮灯](https://so.toutiao.com/search?keyword=网友白菜价买海景房+整栋就自家亮灯)
 1. [《龙珠》作者鸟山明去世](https://so.toutiao.com/search?keyword=《龙珠》作者鸟山明去世)
-1. [妇女节放假半天不调休](https://so.toutiao.com/search?keyword=妇女节放假半天不调休)
-1. [4名狱警殴打服刑人员致死获刑](https://so.toutiao.com/search?keyword=4名狱警殴打服刑人员致死获刑)
+1. [代表：要让电动汽车充次电跑1000公里](https://so.toutiao.com/search?keyword=代表：要让电动汽车充次电跑1000公里)
 1. [中山医院否认张学友住进ICU](https://so.toutiao.com/search?keyword=中山医院否认张学友住进ICU)
-1. [美警告：有人密谋在莫斯科发动袭击](https://so.toutiao.com/search?keyword=美警告：有人密谋在莫斯科发动袭击)
-1. [酒店回应陌生女子尾随男子进屋睡觉](https://so.toutiao.com/search?keyword=酒店回应陌生女子尾随男子进屋睡觉)
+1. [4名狱警殴打服刑人员致死获刑](https://so.toutiao.com/search?keyword=4名狱警殴打服刑人员致死获刑)
+1. [张志磊创下体重新高](https://so.toutiao.com/search?keyword=张志磊创下体重新高)
 1. [张学友病因疑为上呼吸道感染](https://so.toutiao.com/search?keyword=张学友病因疑为上呼吸道感染)
+1. [打破“一人逃亡全家得利”迷梦](https://so.toutiao.com/search?keyword=打破“一人逃亡全家得利”迷梦)
+1. [酒店回应陌生女子尾随男子进屋睡觉](https://so.toutiao.com/search?keyword=酒店回应陌生女子尾随男子进屋睡觉)
+1. [致鸟山明去世的急性硬膜下血肿是什么](https://so.toutiao.com/search?keyword=致鸟山明去世的急性硬膜下血肿是什么)
+1. [妇女节放假半天不调休](https://so.toutiao.com/search?keyword=妇女节放假半天不调休)
+1. [92岁亿万富翁默多克第6次订婚](https://so.toutiao.com/search?keyword=92岁亿万富翁默多克第6次订婚)
+1. [鸟山明漫画《龙珠》究竟讲了啥](https://so.toutiao.com/search?keyword=鸟山明漫画《龙珠》究竟讲了啥)
+1. [男子捞到一个自带戒指的田螺](https://so.toutiao.com/search?keyword=男子捞到一个自带戒指的田螺)
+1. [77名被告以正当防卫宣告无罪](https://so.toutiao.com/search?keyword=77名被告以正当防卫宣告无罪)
+1. [公司妇女节给女员工发馒头](https://so.toutiao.com/search?keyword=公司妇女节给女员工发馒头)
 1. [龙珠不会再有续集了](https://so.toutiao.com/search?keyword=龙珠不会再有续集了)
 1. [MEGA刚上市就被抛弃 理想凉了吗](https://so.toutiao.com/search?keyword=MEGA刚上市就被抛弃+理想凉了吗)
-1. [92岁亿万富翁默多克第6次订婚](https://so.toutiao.com/search?keyword=92岁亿万富翁默多克第6次订婚)
-1. [瑞典正式加入北约](https://so.toutiao.com/search?keyword=瑞典正式加入北约)
-1. [鸟山明曾说没成龙《醉拳》就没龙珠](https://so.toutiao.com/search?keyword=鸟山明曾说没成龙《醉拳》就没龙珠)
-1. [福建提及金门供水问题有何深意](https://so.toutiao.com/search?keyword=福建提及金门供水问题有何深意)
-1. [3个年逾70的“老虎”被最高法点名](https://so.toutiao.com/search?keyword=3个年逾70的“老虎”被最高法点名)
-1. [媒体：35岁就业门槛莫要讨论三五年](https://so.toutiao.com/search?keyword=媒体：35岁就业门槛莫要讨论三五年)
-1. [公司妇女节给女员工发馒头](https://so.toutiao.com/search?keyword=公司妇女节给女员工发馒头)
-1. [冯巩用段子祝女性妇女节快乐](https://so.toutiao.com/search?keyword=冯巩用段子祝女性妇女节快乐)
-1. [雷军晒两会工作照](https://so.toutiao.com/search?keyword=雷军晒两会工作照)
 1. [普京向毕业生送花时打趣绍伊古](https://so.toutiao.com/search?keyword=普京向毕业生送花时打趣绍伊古)
-1. [“罚款0元记0分” 这种罚单咋处理](https://so.toutiao.com/search?keyword=“罚款0元记0分”+这种罚单咋处理)
-1. [媒体：加大政策支持保障种粮收益](https://so.toutiao.com/search?keyword=媒体：加大政策支持保障种粮收益)
-1. [俄罗斯为何想找中国贷款](https://so.toutiao.com/search?keyword=俄罗斯为何想找中国贷款)
+1. [海贼王和火影忍者作者悼念鸟山明](https://so.toutiao.com/search?keyword=海贼王和火影忍者作者悼念鸟山明)
+1. [媒体：35岁就业门槛莫要讨论三五年](https://so.toutiao.com/search?keyword=媒体：35岁就业门槛莫要讨论三五年)
+1. [冯巩用段子祝女性妇女节快乐](https://so.toutiao.com/search?keyword=冯巩用段子祝女性妇女节快乐)
+1. [鸟山明曾说没成龙《醉拳》就没龙珠](https://so.toutiao.com/search?keyword=鸟山明曾说没成龙《醉拳》就没龙珠)
+1. [我国4063万人享受低保](https://so.toutiao.com/search?keyword=我国4063万人享受低保)
+1. [龙珠变身高燃场面](https://so.toutiao.com/search?keyword=龙珠变身高燃场面)
 1. [我国发现首个深水深层大油田](https://so.toutiao.com/search?keyword=我国发现首个深水深层大油田)
+1. [伊万科维奇：会选拔新人进入国足](https://so.toutiao.com/search?keyword=伊万科维奇：会选拔新人进入国足)
+1. [美警告：有人密谋在莫斯科发动袭击](https://so.toutiao.com/search?keyword=美警告：有人密谋在莫斯科发动袭击)
+1. [3个年逾70的“老虎”被最高法点名](https://so.toutiao.com/search?keyword=3个年逾70的“老虎”被最高法点名)
+1. [媒体：艾克森阿兰均有机会重返国足](https://so.toutiao.com/search?keyword=媒体：艾克森阿兰均有机会重返国足)
+1. [球迷曾多次在场内打出《龙珠》TIFO](https://so.toutiao.com/search?keyword=球迷曾多次在场内打出《龙珠》TIFO)
+1. [疑油门当刹车 老头乐加速撞伤路人](https://so.toutiao.com/search?keyword=疑油门当刹车+老头乐加速撞伤路人)
+1. [“罚款0元记0分” 这种罚单咋处理](https://so.toutiao.com/search?keyword=“罚款0元记0分”+这种罚单咋处理)
+1. [民政部部长回应如何应对人口老龄化](https://so.toutiao.com/search?keyword=民政部部长回应如何应对人口老龄化)
+1. [福建提及金门供水问题有何深意](https://so.toutiao.com/search?keyword=福建提及金门供水问题有何深意)
+1. [最高检：司法腐败严重损害司法公正](https://so.toutiao.com/search?keyword=最高检：司法腐败严重损害司法公正)
+1. [情侣40元买彩票刮出100万元大奖](https://so.toutiao.com/search?keyword=情侣40元买彩票刮出100万元大奖)
+1. [专家：菲律宾和美国在南海里应外合](https://so.toutiao.com/search?keyword=专家：菲律宾和美国在南海里应外合)
+1. [俄罗斯为何想找中国贷款](https://so.toutiao.com/search?keyword=俄罗斯为何想找中国贷款)
+1. [去年我国每天有3.6亿件快件被揽收](https://so.toutiao.com/search?keyword=去年我国每天有3.6亿件快件被揽收)
+1. [生态环境部部长：绝不容忍环评造假](https://so.toutiao.com/search?keyword=生态环境部部长：绝不容忍环评造假)
+1. [从热词中读懂中国经济韧性与活力](https://so.toutiao.com/search?keyword=从热词中读懂中国经济韧性与活力)
+1. [迈阿密国际绝平纳什维尔 梅西破门](https://so.toutiao.com/search?keyword=迈阿密国际绝平纳什维尔+梅西破门)
+1. [张学友取消3场上海演唱会](https://so.toutiao.com/search?keyword=张学友取消3场上海演唱会)
+1. [解说员：爱德华兹真是金刚狼](https://so.toutiao.com/search?keyword=解说员：爱德华兹真是金刚狼)
+1. [瑞典正式加入北约](https://so.toutiao.com/search?keyword=瑞典正式加入北约)
+1. [雷军晒两会工作照](https://so.toutiao.com/search?keyword=雷军晒两会工作照)
+1. [媒体：加大政策支持保障种粮收益](https://so.toutiao.com/search?keyword=媒体：加大政策支持保障种粮收益)
 1. [代表建议进一步改革完善年度体检](https://so.toutiao.com/search?keyword=代表建议进一步改革完善年度体检)
 1. [专家谈俄导弹落在泽连斯基车队附近](https://so.toutiao.com/search?keyword=专家谈俄导弹落在泽连斯基车队附近)
 1. [雷军：为小米汽车上市做最后冲刺](https://so.toutiao.com/search?keyword=雷军：为小米汽车上市做最后冲刺)
 1. [委员建议老年人在全国坐公交免费](https://so.toutiao.com/search?keyword=委员建议老年人在全国坐公交免费)
-1. [海贼王和火影忍者作者悼念鸟山明](https://so.toutiao.com/search?keyword=海贼王和火影忍者作者悼念鸟山明)
 1. [孟庭苇谈90后自嘲老阿姨](https://so.toutiao.com/search?keyword=孟庭苇谈90后自嘲老阿姨)
-1. [男子捞到一个自带戒指的田螺](https://so.toutiao.com/search?keyword=男子捞到一个自带戒指的田螺)
-1. [77名被告以正当防卫宣告无罪](https://so.toutiao.com/search?keyword=77名被告以正当防卫宣告无罪)
 1. [李稻葵：产假延到2年会致女性就业难](https://so.toutiao.com/search?keyword=李稻葵：产假延到2年会致女性就业难)
 1. [瑞典加入北约会引发哪些后果](https://so.toutiao.com/search?keyword=瑞典加入北约会引发哪些后果)
 1. [伊万科维奇：自豪执教国足](https://so.toutiao.com/search?keyword=伊万科维奇：自豪执教国足)
@@ -68,7 +90,6 @@
 1. [启源A07内饰大改](https://so.toutiao.com/search?keyword=启源A07内饰大改)
 1. [布林肯谈瑞典入北约：我们空前强大](https://so.toutiao.com/search?keyword=布林肯谈瑞典入北约：我们空前强大)
 1. [孟羽童谈做博主后的收入](https://so.toutiao.com/search?keyword=孟羽童谈做博主后的收入)
-1. [专家：菲律宾和美国在南海里应外合](https://so.toutiao.com/search?keyword=专家：菲律宾和美国在南海里应外合)
 1. [北京暂未开放个人申领第三代社保卡](https://so.toutiao.com/search?keyword=北京暂未开放个人申领第三代社保卡)
 1. [母鸡被老鹰按倒 公鸡来帮忙却秒怂](https://so.toutiao.com/search?keyword=母鸡被老鹰按倒+公鸡来帮忙却秒怂)
 1. [亚丁湾遭胡塞袭击船员撤至吉布提](https://so.toutiao.com/search?keyword=亚丁湾遭胡塞袭击船员撤至吉布提)
@@ -101,7 +122,6 @@
 1. [詹姆斯不舒服最先由助教发现](https://so.toutiao.com/search?keyword=詹姆斯不舒服最先由助教发现)
 1. [森林狼主帅：很难有人能取代唐斯](https://so.toutiao.com/search?keyword=森林狼主帅：很难有人能取代唐斯)
 1. [带娃兜风 宝宝要先确认驾驶员](https://so.toutiao.com/search?keyword=带娃兜风+宝宝要先确认驾驶员)
-1. [张学友取消3场上海演唱会](https://so.toutiao.com/search?keyword=张学友取消3场上海演唱会)
 1. [小孩哥抓蛇带到学校当宠物](https://so.toutiao.com/search?keyword=小孩哥抓蛇带到学校当宠物)
 1. [中国一旅行团在国外收获无数感动](https://so.toutiao.com/search?keyword=中国一旅行团在国外收获无数感动)
 1. [哪些因素会影响金价走势](https://so.toutiao.com/search?keyword=哪些因素会影响金价走势)
